# regularizepsf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  cite.html  concepts.html  covering_experiments.ipynb  development.html  example.py  example_functional.py  examples.html  functional.html  genindex.html  help.html  index.html  intro.html  objects.inv  plots.html  prepare_punch_patches.py  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  requirements_dev.txt  scratch.py  scratch2.py  search.html  searchindex.js  setup.py  theory.html  visualization.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  ci_fixed.yaml  docs.yml  monthly.yaml  publish.yml  python-publish.yml  weeklypr.yaml
_modules/: index.html
_modules/regularizepsf/: corrector.html  exceptions.html  fitter.html  psf.html  visualize.html
_sources/: cite.rst.txt  development.rst.txt  help.rst.txt  index.rst.txt
_sources/api/regularizepsf/: index.rst
_sources/api/regularizepsf/fitter/: index.rst
_sources/autoapi/: index.rst.txt
_sources/autoapi/regularizepsf/: index.rst.txt
_sources/autoapi/regularizepsf/corrector/: index.rst.txt
_sources/autoapi/regularizepsf/exceptions/: index.rst.txt
_sources/autoapi/regularizepsf/fitter/: index.rst.txt
_sources/autoapi/regularizepsf/psf/: index.rst.txt
_sources/autoapi/regularizepsf/visualize/: index.rst.txt
api/regularizepsf/: index.html
api/regularizepsf/corrector/: index.html
api/regularizepsf/exceptions/: index.html
api/regularizepsf/fitter/: index.html
api/regularizepsf/psf/: index.html
api/regularizepsf/visualize/: index.html
autoapi/: index.html
autoapi/regularizepsf/: index.html
autoapi/regularizepsf/corrector/: index.html
autoapi/regularizepsf/exceptions/: index.html
autoapi/regularizepsf/fitter/: index.html
autoapi/regularizepsf/psf/: index.html
autoapi/regularizepsf/visualize/: index.html
changelog/: 247.feature.rst  248.trivial.rst  249.feature.rst  250.trivial.rst  251.trivial.rst  252.feature.rst  253.bugfix.rst
docs/: _config.yml  _toc.yml  array.md  cite.md  development.md  functional.md  help.md  intro.md  old.md  plots.md  quickstart.md  quickstart_example.py  requirements.txt  simple_psf.md  theory.md  varied_psf.md
docs/source/: cite.rst  concepts.rst  conf.py  development.rst  example.ipynb  examples.rst  help.rst  index.rst  visualization.rst
include/: fftw_helper.h
psfpy/: __init__.py  corrector.py  exceptions.py  fft_speed.c  fftw_helper.c  fitter.py  helper.pyx  model.py  models.py  psf.py  speedy.pyx  starfitter.py
regularizepsf/: __init__.py  builder.py  corrector.py  exceptions.py  fitter.py  helper.c  helper.html  helper.pyx  image_processing.py  models.py  psf.py  transform.py  util.py  visualize.py
scripts/: correct_dash.py  correct_noise.py  correct_ones.py  correct_punch.py  correct_punch2.py  correct_punch_starfind.py  experiment_star_finding.py
tests/: helper.py  test_builder.py  test_corrector.py  test_fitter.py  test_model.py  test_models.py  test_psf.py  test_transform.py  test_util.py  test_visualize.py
