[project]
name = "regularizepsf"
version = "1.0.0"
requires-python = ">3.10"
description = "Point spread function modeling and regularization"
dependencies = [
      "numpy",
      "h5py",
      "sep-pjw",
      "astropy",
      "scipy",
      "scikit-image",
      "matplotlib",
      "setuptools"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
     "pytest",
     "pytest-cov",
     "hypothesis",
     "coverage",
     "ruff",
     "pytest-mpl",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autoapi"
]

dev = ["regularizepsf[test, docs]", "pre-commit"]

[tool.ruff]
exclude = ['tests/*', 'docs/*']
line-length = 120
lint.select = ["ALL"]
lint.ignore = [ "FBT001", "FBT002", "ANN101", "ANN102", "ANN401", "FIX002", "TD", "PD011", "I001"]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_compatibility = "future"
known_first_party = "regularizepsf"
length_sort = false
length_sort_sections = "stdlib"
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "FUTURE, COMPATIBILITY, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = "pp*"
